Add secons section

--- a/index.html
+++ b/index.html
@@ -51,37 +51,80 @@
 
     <!-- blog section -->
     <section class="section__blog container" id="blog">
-      <h2 class="blog__header">Blog</h2>
-      <div class="blog__columns">
-        <article class="blog__column">
+      <h2 class="section__header">Blog</h2>
+      <div class="section__columns">
+        <article class="section__column">
             <img src="images/photo1.png" alt="Car's center console">
-            <h3 class="blog__column-title">LOREM IPSUM SIT DOLOR</h3>
-            <p class="blog__column-subtitle">
+            <h3 class="section__column-title">LOREM IPSUM SIT DOLOR</h3>
+            <p class="section__column-subtitle">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
-            <a href="#" class="blog__column-btn">Read more</a>
+            <a href="#" class="section__column-btn">Read more</a>
         </article>
-        <article class="blog__column">
+        <article class="section__column">
             <img src="images/photo2.png" alt="Front-side of a red car">
-            <h3 class="blog__column-title">LOREM IPSUM SIT DOLOR</h3>
-            <p class="blog__column-subtitle">
+            <h3 class="section__column-title">LOREM IPSUM SIT DOLOR</h3>
+            <p class="section__column-subtitle">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
-            <a href="#" class="blog__column-btn">Read more</a>
+            <a href="#" class="section__column-btn">Read more</a>
         </article>
-        <article class="blog__column">
+        <article class="section__column">
             <img src="images/photo3.png" alt="View of the engine compartment showing the car's motor and components">
-            <h3 class="blog__column-title">LOREM IPSUM SIT DOLOR</h3>
-            <p class="blog__column-subtitle">
+            <h3 class="section__column-title">LOREM IPSUM SIT DOLOR</h3>
+            <p class="section__column-subtitle">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
-            <a href="#" class="blog__column-btn">Read more</a>
+            <a href="#" class="section__column-btn">Read more</a>
         </article>
-
       </div>
 
     </section>
     <!-- e: blog section -->
+
+    <!-- service section -->
+    <section class="section__service" id="service">
+      <section class="container">
+          <h2 class="section__header">Service</h2>
+          <div class="section__columns">
+            <article class="section__column">
+                <img src="images/mini1.png" alt="Car's center console">
+                <h3 class="section__column-title">LOREM IPSUM SIT DOLOR</h3>
+                <p class="section__column-subtitle">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+                </p>
+                <a href="#" class="section__column-btn">Read more</a>
+            </article>
+            <article class="section__column">
+                <img src="images/mini2.png" alt="Gear level closeup">
+                <h3 class="section__column-title">LOREM IPSUM SIT DOLOR</h3>
+                <p class="section__column-subtitle">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+                </p>
+                <a href="#" class="section__column-btn">Read more</a>
+            </article>
+            <article class="section__column">
+                <img src="images/mini3.png" alt="Steering wheel closeup">
+                <h3 class="section__column-title">LOREM IPSUM SIT DOLOR</h3>
+                <p class="section__column-subtitle">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+                </p>
+                <a href="#" class="section__column-btn">Read more</a>
+            </article>
+            </article>
+            <article class="section__column">
+                <img src="images/mini4.png" alt="Panel closeup">
+                <h3 class="section__column-title">LOREM IPSUM SIT DOLOR</h3>
+                <p class="section__column-subtitle">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+                </p>
+                <a href="#" class="section__column-btn">Read more</a>
+            </article>
+          </div>
+      </section>
+
+    </section>
+    <!-- e: service section -->
 
 </body>
 </html>
