--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- e: welcome page, e: banner with fullscr photo -->
 
     <!-- blog section -->
-    <section class="section__blog container" id="blog">
+    <section class="section container" id="blog">
       <h2 class="section__header">Blog</h2>
       <div class="section__columns">
         <article class="section__column">
@@ -83,7 +83,7 @@
     <!-- e: blog section -->
 
     <!-- service section -->
-    <section class="section__service" id="service">
+    <section class="section" id="service">
       <section class="container">
           <h2 class="section__header">Service</h2>
           <div class="section__columns">
