--- a/index.html
+++ b/index.html
@@ -126,5 +126,27 @@
     </section>
     <!-- e: service section -->
 
+    <!-- contact section -->
+     <section class="section container" id="contact">
+      <h2 class="section__header">Contact</h2>
+      <div class="section__columns">
+        <img src="images/form_photo.png" alt="Red and blue car">
+        <form action="#" method="post" class="section__column" id="form">
+          <label for="name"></label>
+          <input type="text" name="name" placeholder="Type your name" id="name" aria-label="Name" class="form__input">
+          <label for="email"></label>
+          <input type="email" name="email" placeholder="Type your e-mail" id="email" aria-label="E-mail" class="form__input">
+          <label for="msg"></label>
+          <textarea name="message" placeholder="Type your message" id="msg" aria-label="Message" class="form__input"></textarea>
+          <div class="form__consent">
+            <input type="checkbox" name="consent" id="consent" required class="form__input">
+            <label for="consent" aria-label="Consent checkbox">I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</label>
+          </div>
+          <button type="submit" class="section__btn">Send</button>
+        </form>
+
+      </div>
+     </section>
+
 </body>
 </html>
