Add style to nav-bar

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
         <!-- nav links -->
         <ul class="header__nav-list">
-          <li class="header__nav-list-item">Home</li>
-          <li class="header__nav-list-item">Blog</li>
-          <li class="header__nav-list-item">Service</li>
-          <li class="header__nav-list-item">Contact</li>
+          <li class="header__nav-list-item"><a href="#">Home</a></li>
+          <li class="header__nav-list-item"><a href="#blog">Blog</a></li>
+          <li class="header__nav-list-item"><a href="#service">Service</a></li>
+          <li class="header__nav-list-item"><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -140,7 +140,9 @@
           <textarea name="message" placeholder="Type your message" id="msg" aria-label="Message" class="form__input"></textarea>
           <div class="form__consent">
             <input type="checkbox" name="consent" id="consent" required class="form__input">
-            <label for="consent" aria-label="Consent checkbox">I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</label>
+            <label for="consent" aria-label="Consent checkbox">
+              I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)
+            </label>
           </div>
           <button type="submit" class="section__btn">Send</button>
         </form>
